--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -8,10 +8,7 @@
         <variable
             name="dashboardVm"
             type="com.assignment.victoriassecret.viewModel.DashBoardViewModel" />
-        <!-- <variable
-            name="handlr"
-            type="com.app.europetadmin.mvvm.interfacelistner.ForgotInterface" />
-    -->
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,48 +17,19 @@
         android:background="@color/white"
         tools:context=".view.activity.DashBoardActivity">
 
-        <FrameLayout
-            android:id="@+id/frame_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clipToPadding="false"
-            android:padding="10dp"
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragmentContainerView"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="1dp"
+            app:defaultNavHost="true"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <View
-                android:id="@+id/indicator"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:visibility="visible"
-                android:background="@drawable/gradient_bg"/>
-
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tab_layout"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/tablayout_background"
-                app:tabGravity="fill"
-                app:tabTextColor="@android:color/holo_blue_dark"
-                app:tabIndicatorColor="@null"
-                app:tabMode="fixed"
-                app:tabRippleColor="@null"
-                app:tabSelectedTextColor="@color/white" />
-
-        </FrameLayout>
-
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPager"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/frame_layout"
-            app:layout_constraintStart_toStartOf="@+id/frame_layout"
-            app:layout_constraintTop_toBottomOf="@+id/frame_layout"
-            tools:layout_editor_absoluteX="8dp" />
-
+            app:layout_constraintTop_toTopOf="parent"
+            app:navGraph="@navigation/app_navigation" />
 
        <!-- <ProgressBar
             app:layout_constraintBottom_toBottomOf="parent"
